--- a/.config/polybar/current.ini
+++ b/.config/polybar/current.ini
@@ -9,124 +9,85 @@
 ;;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-;; Global WM Settings
+;; Configuración Global del Gestor de Ventanas (WM)
 
 [global/wm]
-; Adjust the _NET_WM_STRUT_PARTIAL top value
-; Used for top aligned bars
+include-file = $HOME/.config/polybar/colors.ini
+include-file = $HOME/.config/polybar/modules.ini
+
+; Ajusta el valor inferior de _NET_WM_STRUT_PARTIAL para barras superiores
 margin-bottom = 0
 
-; Adjust the _NET_WM_STRUT_PARTIAL bottom value
-; Used for bottom aligned bars
+; Ajusta el valor superior de _NET_WM_STRUT_PARTIAL para barras inferiores
 margin-top = 0
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-;; File Inclusion
-; include an external file, like module file, etc.
+;; Inclusión de Archivos
+; Aquí incluyo mi archivo de colores y el de módulos.
 
-include-file = ~/.config/polybar/colors.ini
+
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-;; Bar Settings
+;; Configuración Base de las Barras
 
 [bar/main]
-; Use either of the following command to list available outputs:
-; If unspecified, the application will pick the first one it finds.
+; Usa uno de estos comandos para listar los monitores disponibles.
 ; $ polybar -m | cut -d ':' -f 1
 ; $ xrandr -q | grep " connected" | cut -d ' ' -f1
 monitor =
 
-; Use the specified monitor as a fallback if the main one is not found.
+; Monitor de respaldo si el principal no se encuentra.
 monitor-fallback =
 
-; Require the monitor to be in connected state
-; XRandR sometimes reports my monitor as being disconnected (when in use)
+; Requiere que el monitor esté "conectado"
 monitor-strict = false
 
-; Tell the Window Manager not to configure the window.
-; Use this to detach the bar if your WM is locking its size/position.
+; Indica al WM que no configure la ventana. Útil para desvincular la barra.
 ;override-redirect = true
 
-; Put the bar at the bottom of the screen
+; Coloca la barra en la parte inferior de la pantalla (Base: true)
 bottom = true
 
-; Prefer fixed center position for the `modules-center` block
-; When false, the center position will be based on the size of the other blocks.
+; Prefiere una posición central fija para el bloque central.
 fixed-center = true
 
-; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
-; the percentage can optionally be extended with a pixel offset like so:
-; 50%:-10, this will result in a width or height of 50% minus 10 pixels
+; Dimensiones (píxeles o porcentaje: 50%:-10)
 width = 17%
 height = 20
 
-; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
-; the percentage can optionally be extended with a pixel offset like so:
-; 50%:-10, this will result in an offset in the x or y direction 
-; of 50% minus 10 pixels
+; Offset (píxeles o porcentaje: 50%:-10)
 offset-x = 20
 offset-y = 3
 
-; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
+; Colores ARGB
 background = ${color.bg}
-
-; Foreground ARGB color (e.g. #f00, #ff992a, #ddff1023)
 foreground = ${color.fg}
 
-; Background gradient (vertical steps)
-;   background-[0-9]+ = #aarrggbb
+; Degradado de fondo (background-[0-9] = #aarrggbb)
 ;;background-0 = 
 
-; Value used for drawing rounded corners
-; Note: This shouldn't be used together with border-size because the border 
-; doesn't get rounded
-; Individual top/bottom values can be defined using:
-;   radius-{top,bottom}
+; Valor para esquinas redondeadas (¡No usar con border-size!)
 radius-top = 10.0
 radius-bottom = 10.0
 
-; Under-/overline pixel size and argb color
-; Individual values can be defined using:
-;   {overline,underline}-size
-;   {overline,underline}-color
+; Tamaño y color de la línea inferior (underline)
 line-size = 2
 line-color = ${color.ac}
 
-; Values applied to all borders
-; Individual side values can be defined using:
-;   border-{left,top,right,bottom}-size
-;   border-{left,top,right,bottom}-color
-; The top and bottom borders are added to the bar height, so the effective
-; window height is:
-;   height + border-top-size + border-bottom-size
-; Meanwhile the effective window width is defined entirely by the width key and
-; the border is placed withing this area. So you effectively only have the
-; following horizontal space on the bar:
-;   width - border-right-size - border-left-size
+; Bordes
 border-bottom-size = 0
 border-color = ${color.ac}
 
-; Number of spaces to add at the beginning/end of the bar
-; Individual side values can be defined using:
-;   padding-{left,right}
+; Espacios al inicio/fin de la barra (padding-{left,right})
 padding = 2
 
-; Number of spaces to add before/after each module
-; Individual side values can be defined using:
-;   module-margin-{left,right}
+; Espacios antes/después de cada módulo (module-margin-{left,right})
 module-margin-left = 1
 module-margin-right = 1
 
-; Fonts are defined using <font-name>;<vertical-offset>
-; Font names are specified using a fontconfig pattern.
-;   font-0 = NotoSans-Regular:size=8;2
-;   font-1 = MaterialIcons:size=10
-;   font-2 = Termsynu:size=8;-1
-;   font-3 = FontAwesome:size=10
-; See the Fonts wiki page for more details
-
+; Fuentes: <nombre-de-fuente>;<offset-vertical>
 font-0 = "Iosevka Nerd Font:size=13;3"
 font-1 = "Iosevka Nerd Font:bold:size=24;2"
 font-2 = "Iosevka Nerd Font:size=22;6"
@@ -134,62 +95,58 @@ font-3 = "Source Code Pro:size=10;3"
 font-5 = "Helvetica Rounded:style=Bold:size=10.5;3"
 font-4 = "Montserrat Medium:style=Medium:size=12;3"
 font-6 = "Hurmit Nerd Font Mono:style=medium:pixelsize=17;3"
-; Modules are added to one of the available blocks
-;   modules-left = cpu ram
-;   modules-center = xwindow xbacklight
-;   modules-right = ipc clock
 
-;; Available modules
-;;
-;alsa backlight battery
-;bspwm cpu date
-;filesystem github i3
-;subscriber demo memory
-;menu-apps mpd wired-network
-;wireless-network network pulseaudio
-;name_you_want temperature my-text-label
-;backlight keyboard title workspaces 
-;;
-;; User modules
-;checknetwork updates window_switch launcher powermenu sysmenu menu
-;;
-;; Bars
-;cpu_bar memory_bar filesystem_bar mpd_bar 
-;volume brightness battery_bar 
+; Los módulos se añaden a los bloques (left, center, right)
+; Ejemplo: modules-left = cpu ram
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+;; --- Definiciones de Barras Individuales ---
+
 [bar/primary]
 inherit = bar/main
 offset-x = 96.9%
-offset-y = 3
 width = 2.5%
-height = 20
-bottom = false
+bottom = false ; La ponemos arriba
 padding = 0
 module-margin-left = 0
 module-margin-right = 0
-background = ${color.bg}
-;foreground = ${color.blue}
-foreground = #44abff
-;modules-center = web sep2 files sep2 edit sep2 apps
+foreground = #44abff ; Color específico para el módulo
 modules-center = sysmenu
 wm-restack = bspwm
 
+[bar/localip]
+inherit = bar/main
+width = 13%
+offset-x = 11%
+bottom = false ; La ponemos arriba
+padding = 1
+module-margin-left = 0
+module-margin-right = 0
+foreground = ${color.white}
+modules-center = network_switch 
+wm-restack = bspwm
+
+[bar/ipscan]
+inherit = bar/main
+width = 14%
+offset-x = 76.3%
+bottom = false ; La ponemos arriba
+padding = 1
+module-margin-left = 0
+module-margin-right = 0
+foreground = ${color.white}
+modules-center = network-scan
+wm-restack = bspwm
 
 [bar/secondary]
 inherit = bar/main
 width = 7%
-height = 20
 offset-x = 3.8%
-offset-y = 3
-background = ${color.bg}
-foreground = ${color.white}
-bottom = false
+bottom = false ; La ponemos arriba
 padding = 1
-;padding-top = 2
 module-margin-left = 0
 module-margin-right = 0
-;modules-left = date sep mpd
+foreground = ${color.white}
 modules-center = date 
 wm-restack = bspwm
 
@@ -214,53 +171,40 @@ height = 20
 offset-x = 90.5%
 offset-y = 3
 bottom = false
-font-0 = "Iosevka Nerd Font:size=12;3"
 background = ${color.bg}
 padding = 1
 module-margin-left = 1
 module-margin-right = 1
 ;wm-restack = bspwm
-modules-center = tray jalsa battery auto-network
+modules-center = alsa tray
+
+
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+;; --- Configuración Global (Continuación) ---
 
-; The separator will be inserted between the output of each module
+; Separador que se inserta entre la salida de cada módulo (default: " ")
 separator =
 
-; This value is used to add extra spacing between elements
-; @deprecated: This parameter will be removed in an upcoming version
+; Espaciado extra (obsoleto, ya no lo uso)
 spacing = 0
 
-; Opacity value between 0.0 and 1.0 used on fade in/out
+; Opacidad en fade in/out
 dim-value = 1.0
 
-; Value to be used to set the WM_NAME atom
-; If the value is empty or undefined, the atom value
-; will be created from the following template: polybar-[BAR]_[MONITOR]
-; NOTE: The placeholders are not available for custom values
+; Nombre de la ventana para el WM (para OpenBox)
 wm-name = openbox
 
-; Restack the bar window and put it above the
-; selected window manager's root
-;
-; Fixes the issue where the bar is being drawn
-; on top of fullscreen window's
-;
-; Currently supported WM's:
-;   bspwm
-;   i3 (requires: `override-redirect = true`)
+; Reorganiza la barra para que esté sobre ventanas en fullscreen
 wm-restack = bspwm
 
-; Set a DPI values used when rendering text
-; This only affects scalable fonts
+; Ajuste de DPI (solo para fuentes escalables)
 ; dpi = 
 
-; Enable support for inter-process messaging
-; See the Messaging wiki page for more details.
+; Habilitar comunicación entre procesos (IPC)
 enable-ipc = true
 
-; Fallback click handlers that will be called if
-; there's no matching module handler found.
+; Handlers de clic de respaldo si el módulo no tiene uno
 click-left = 
 click-middle = 
 click-right =
@@ -270,301 +214,16 @@ double-click-left =
 double-click-middle =
 double-click-right =
 
-; Requires polybar to be built with xcursor support (xcb-util-cursor)
-; Possible values are:
-; - default   : The default pointer as before, can also be an empty string (default)
-; - pointer   : Typically in the form of a hand
-; - ns-resize : Up and down arrows, can be used to indicate scrolling
+; Puntero del ratón para eventos de clic/scroll (requiere xcursor)
 cursor-click = 
 cursor-scroll = 
 
-;; WM Workspace Specific
-
-; bspwm
-;;scroll-up = bspwm-desknext
-;;scroll-down = bspwm-deskprev
-;;scroll-up = bspc desktop -f prev.local
-;;scroll-down = bspc desktop -f next.local
-
-;i3
-;;scroll-up = i3wm-wsnext
-;;scroll-down = i3wm-wsprev
-;;scroll-up = i3-msg workspace next_on_output
-;;scroll-down = i3-msg workspace prev_on_output
-
-;openbox
-;awesome
-;etc
-
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-;; Application Settings
+;; Configuración de la Aplicación
 
 [settings]
-;format-foreground = ${color.fg}
-;format-background = ${color.bg}
-;format-underline  = #00000000
-;format-overline   = #00000000
-
-; Opcional: solo si deseas normalizar espaciamientos globales
-; format-spacing = 0
-; format-padding = 0
-; format-margin  = 0
-; format-offset  = 0
-
-
-; Enables pseudo-transparency for the bar
-; If set to true the bar can be transparent without a compositor.
+; Habilita la pseudo-transparencia (si no hay compositor)
 pseudo-transparency = false
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-;;
-;;	    __  ___          __      __         
-;;	   /  |/  /___  ____/ /_  __/ /__  _____
-;;	  / /|_/ / __ \/ __  / / / / / _ \/ ___/
-;;	 / /  / / /_/ / /_/ / /_/ / /  __(__  ) 
-;;	/_/  /_/\____/\__,_/\__,_/_/\___/____/  
-;;
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/tray]
-type = internal/tray
-tray-size = 18
-tray-padding = 4
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-
-[module/my-text-label]
-type = custom/text
-content = %{T7}
-
-;interval = 1.0
-;time = %k : %M
-;date = %b %e
-;format = <label1>
-;format-foreground = ${color.white}
-;label1 = aadasd
-;label1-font = 7
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/date]
-type = internal/date
-
-interval = 1.0
-time = %k : %M
-date = %b %e
-;padding-top = 2
-format = <label>
-format-foreground = ${color.white}
-;format-background = $(color.blue}
-;label = %{T7} %{T6}%date%|%time%
-;label = %{T7} %{T6}Pop! OS  |   %time%
-label = %date%  |  %time% 
-label-font = 6
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/mpd]
-type = internal/mpd
-
-interval = 2
-
-format-online = <label-song>
-format-online-foreground = ${color.fg}
-
-label-song = "%title%"
-label-song-maxlen = 12
-label-song-ellipsis = true
-label-offline = "Offline"
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-;; Apps
- 
-[module/term]
-type = custom/text
-
-content = "%{T3}%{T-}"
-content-foreground = ${color.black}
-content-background = ${color.bg}
-content-padding = 0
-
-click-left  = termite &
-
-[module/web]
-type = custom/text
-
-content = "%{T3}%{T-}"
-content-foreground = ${color.white}
-content-background = ${color.bg}
-content-padding = 0
-
-click-left  = firefox &
-
-[module/files]
-type = custom/text
-
-content = "%{T3}%{T-}"
-content-foreground = ${color.blue}
-content-background = ${color.bg}
-content-padding = 0
-
-click-left  = thunar &
-
-[module/edit]
-type = custom/text
-
-content = "%{T3}%{T-}"
-content-foreground = ${color.blue-gray}
-content-background = ${color.bg}
-content-padding = 0
-
-click-left  = geany &
-
-[module/apps]
-type = custom/text
-
-content = "%{T3}%{T-}"
-content-foreground = ${color.fg}
-content-background = ${color.bg}
-content-padding = 0
-
-click-left  = ~/.config/polybar/scripts/launcher &
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/sep]
-type = custom/text
-content = " | "
-content-font = 1
-
-;;content-background = #000
-content-foreground = ${color.fg}
-;;content-padding = 4
-
-[module/sep2]
-type = custom/text
-content = "   "
-
-;;content-background = #000
-content-foreground = ${color.fg}
-;;content-padding = 4
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/alsa]
-type = internal/alsa
-;format-background = ${color.blue}
-format-volume = <ramp-volume>
-format-muted = <label-muted>
-label-muted = %{A3:pavucontrol &:} 婢 %{A}
-label-muted-foreground = ${color.gray}
-;click-right = pavucontrol
-ramp-volume-0 = %{A3:pavucontrol &:} 奄%{A}
-ramp-volume-1 = %{A3:pavucontrol &:}奔%{A}
-ramp-volume-2 = %{A3:pavucontrol &:}奔%{A}
-ramp-volume-3 = %{A3:pavucontrol &:}墳%{A}
-ramp-volume-4 = %{A3:pavucontrol &:}墳%{A}
-ramp-volume-foreground = ${color.white}
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/battery]
-type = internal/battery
-
-full-at = 99
-battery = BAT1
-adapter = ACAD
-
-poll-interval = 2
-time-format = %H:%M
-
-format-charging = <animation-charging>
-format-discharging = <ramp-capacity>
-
-format-full = <label-full>
-format-full-foreground = ${color.white}
-;format-full-background = $(color.white}
-label-full = 
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-5 = 
-ramp-capacity-6 = 
-ramp-capacity-7 = 
-ramp-capacity-8 = 
-ramp-capacity-9 = 
-ramp-capacity-foreground = ${color.white}
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-5 = 
-animation-charging-6 = 
-animation-charging-7 = 
-animation-charging-8 = 
-animation-charging-9 = 
-animation-charging-foreground = ${color.white}
-animation-charging-framerate = 750
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/network]
-type = internal/network
-interface = wlp2s0
-click-left = kcmshell5 kcm_networkmanagement
-interval = 1.0
-accumulate-stats = true
-unknown-as-up = true
-
-format-connected = <label-connected>
-format-connected-foreground = ${color.white}
-;content-background = $(color.blue}
-format-disconnected = <label-disconnected>
-format-disconnected-foreground = ${color.gray}
-
-label-connected = 直
-label-disconnected = 睊
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/auto-network]
-type = custom/script
-exec = ~/.config/polybar/scripts/auto_network.sh
-interval = 5 
-format-connected = <label>
-format-disconnected = <label>
-
-; CAMBIO AQUÍ: Usamos el Applet de NetworkManager de Xfce
-click-left = nm-connection-editor
-
-format-foreground = ${color.white}
-label-disconnected-foreground = ${color.gray}
-
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/sysmenu]
-type = custom/text
-content = 襤
-
-content-foreground = ${color.white}
-click-left = ~/.config/polybar/scripts/powermenu_alt
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-;;	    __________  ______
-;;	   / ____/ __ \/ ____/
-;;	  / __/ / / / / /_    
-;;	 / /___/ /_/ / __/    
-;;	/_____/\____/_/       
-;;
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-
