--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -1,7 +1,8 @@
 [Appearance]
 color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=true
-standard_dialogs=gtk3
+icon_theme=breeze-dark
+standard_dialogs=xdgdesktopportal
 style=Fusion
 
 [Fonts]
@@ -14,7 +15,7 @@ buttonbox_layout=0
 cursor_flash_time=1000
 dialog_buttons_have_icons=1
 double_click_interval=400
-gui_effects=@Invalid()
+gui_effects=General
 keyboard_scheme=2
 menus_have_icons=true
 show_shortcuts_in_context_menus=true
@@ -24,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3\xe7\0\0\0\x1c\0\0\a|\0\0\x4\x34\0\0\x3\xe7\0\0\0\x1c\0\0\a|\0\0\x4\x34\0\0\0\0\0\0\0\0\a\x80\0\0\x3\xe7\0\0\0\x1c\0\0\a|\0\0\x4\x34)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x3\0\0\0\x1c\0\0\a|\0\0\x4\x34\0\0\0\x5\0\0\0\x1e\0\0\az\0\0\x4\x32\0\0\0\0\0\0\0\0\a\x80\0\0\0\x5\0\0\0\x1e\0\0\az\0\0\x4\x32)
 
 [Troubleshooting]
 force_raster_widgets=1
