--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x3\0\0\0\x1c\0\0\a|\0\0\x4\x34\0\0\0\x3\0\0\0\x1c\0\0\a|\0\0\x4\x34\0\0\0\0\0\0\0\0\a\x80\0\0\0\x3\0\0\0\x1c\0\0\a|\0\0\x4\x34)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x3\0\0\0\x1c\0\0\a|\0\0\x4\x34\0\0\0\x5\0\0\0\x1e\0\0\az\0\0\x4\x32\0\0\0\0\0\0\0\0\a\x80\0\0\0\x5\0\0\0\x1e\0\0\az\0\0\x4\x32)
 
 [Troubleshooting]
 force_raster_widgets=1
