--- a/Config Files/polybar/modules.ini
+++ b/Config Files/polybar/modules.ini
@@ -18,19 +18,8 @@ tray-padding = 5
 background = ${color.bg}
 foreground = ${color.white}
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-
-[module/my-text-label]
-type = custom/text
-; Glifo de mi distro (Arch/Linux)
-content = %{T7}
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
 [module/date]
 type = internal/date
-
 interval = 1.0
 time = %k : %M
 date = %b %e
@@ -40,20 +29,6 @@ format-foreground = ${color.white}
 label = %date%  |  %time% 
 label-font = 6
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/mpd]
-type = internal/mpd
-
-interval = 2
-
-format-online = <label-song>
-format-online-foreground = ${color.fg}
-
-label-song = "%title%"
-label-song-maxlen = 12
-label-song-ellipsis = true
-label-offline = "Offline"
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -185,3 +160,25 @@ exec = stdbuf -oL -eL ~/.config/polybar/scripts/network_scan.sh loop
 interval = 0
 click-right = ~/.config/polybar/scripts/network_scan.sh scan
 click-left  = ~/.config/polybar/scripts/network_scan.sh notify
+
+[module/workspaces]
+type = internal/xworkspaces
+pin-workspaces = true
+enable-click = true
+enable-scroll = true
+font-0 = "Iosevka Nerd Font:size=12;2"
+font-1 = "Font Awesome 6 Free:size=12;1"
+font-2 = "Iosevka Nerd Font:bold:size=12;2"
+format = <label-state>
+label-active = ■
+label-active-foreground = ${color.white}
+label-active-background = ${color.bg}
+label-occupied = □
+label-occupied-foreground = ${color.white}
+label-occupied-background = ${color.bg}
+label-urgent = ✘
+label-urgent-foreground = ${color.ac}
+label-urgent-background = ${color.bg}
+label-empty = ◇
+label-empty-foreground = ${color.white}
+label-empty-background = ${color.bg}
