--- a/Config Files/polybar/current.ini
+++ b/Config Files/polybar/current.ini
@@ -126,18 +126,6 @@ foreground = ${color.white}
 modules-center = network_switch 
 wm-restack = bspwm
 
-[bar/ipscan]
-inherit = bar/main
-width = 14%
-offset-x = 76.3%
-bottom = false ; La ponemos arriba
-padding = 1
-module-margin-left = 0
-module-margin-right = 0
-foreground = ${color.white}
-modules-center = network-scan
-wm-restack = bspwm
-
 [bar/secondary]
 inherit = bar/main
 width = 7%
@@ -150,20 +138,6 @@ foreground = ${color.white}
 modules-center = date 
 wm-restack = bspwm
 
-[bar/log]
-inherit = bar/main
-width = 2.5%
-height = 20
-offset-x = 1%
-offset-y = 3
-bottom = false
-foreground = ${color.white}
-background = ${color.bg}
-padding = 0
-modules-center = my-text-label
-wm-restack = bspwm
-;override-redirect = true
-
 [bar/top]
 inherit = bar/main
 width = 10%
@@ -175,21 +149,9 @@ background = ${color.bg}
 padding = 1
 module-margin-left = 1
 module-margin-right = 1
-;wm-restack = bspwm
-modules-center = alsa tray mpd
-
-
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-;; --- Configuración Global (Continuación) ---
-
-; Separador que se inserta entre la salida de cada módulo (default: " ")
+modules-center = tray
 separator =
-
-; Espaciado extra (obsoleto, ya no lo uso)
 spacing = 0
-
-; Opacidad en fade in/out
 dim-value = 1.0
 
 ; Nombre de la ventana para el WM (para OpenBox)
@@ -204,7 +166,6 @@ wm-restack = bspwm
 ; Habilitar comunicación entre procesos (IPC)
 enable-ipc = true
 
-; Handlers de clic de respaldo si el módulo no tiene uno
 click-left = 
 click-middle = 
 click-right =
@@ -214,16 +175,19 @@ double-click-left =
 double-click-middle =
 double-click-right =
 
-; Puntero del ratón para eventos de clic/scroll (requiere xcursor)
 cursor-click = 
 cursor-scroll = 
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-;; Configuración de la Aplicación
-
-[settings]
-; Habilita la pseudo-transparencia (si no hay compositor)
-pseudo-transparency = false
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+[bar/workspaces]
+width = 10%
+height = 20
+inherit = bar/main
+wm-restack = bspwm
+offset-x = 40%
+offset-y = 3
+bottom = false
+padding = 0
+module-margin-left = 0
+module-margin-right = 0
+modules-center = workspaces
