--- a/Config Files/polybar/modules.ini
+++ b/Config Files/polybar/modules.ini
@@ -21,12 +21,18 @@ foreground = ${color.white}
 [module/date]
 type = internal/date
 interval = 1.0
-time = %k : %M
+
+; Vista normal (24h)
+time = %H:%M:%S (GMT-5)
 date = %b %e
+
+; Vista alternativa (12h con AM/PM)
+time-alt = %I:%M:%S %p
+date-alt = %b %e
+
 format = <label>
 format-foreground = ${color.white}
-; Usamos la font 6 para el label, definida en [bar/main]
-label = %date%  |  %time% 
+label = %date% | %time%
 label-font = 6
 
 
@@ -44,19 +50,27 @@ content = "   "
 content-foreground = ${color.fg}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/alsa]
-type = internal/alsa
-format-volume = <ramp-volume>
-format-muted = <label-muted>
-label-muted = %{A3:pavucontrol &:}婢%{A}
-ramp-volume-0 = %{A3:pavucontrol &:}奄%{A}
-ramp-volume-1 = %{A3:pavucontrol &:}奔%{A}
-ramp-volume-2 = %{A3:pavucontrol &:}奔%{A}
-ramp-volume-3 = %{A3:pavucontrol &:}墳%{A}
-ramp-volume-4 = %{A3:pavucontrol &:}墳%{A}
-ramp-volume-foreground = ${color.white}
-label-muted-foreground = ${color.white}
+[module/workspaces]
+type = internal/xworkspaces
+pin-workspaces = true
+enable-click = true
+enable-scroll = true
+font-0 = "Iosevka Nerd Font:size=12;2"
+font-1 = "Font Awesome 6 Free:size=12;1"
+font-2 = "Iosevka Nerd Font:bold:size=12;2"
+format = <label-state>
+label-active = ■
+label-active-foreground = ${color.white}
+label-active-background = ${color.bg}
+label-occupied = □
+label-occupied-foreground = ${color.white}
+label-occupied-background = ${color.bg}
+label-urgent = ✘
+label-urgent-foreground = ${color.ac}
+label-urgent-background = ${color.bg}
+label-empty = ◇
+label-empty-foreground = ${color.white}
+label-empty-background = ${color.bg}
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/battery]
@@ -104,81 +118,3 @@ animation-charging-foreground = ${color.white}
 animation-charging-framerate = 750
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/network]
-type = internal/network
-interface = wlp2s0 ; ¡Asegúrate de que esta interfaz sea correcta!
-click-left = kcmshell5 kcm_networkmanagement
-interval = 1.0
-accumulate-stats = true
-unknown-as-up = true
-
-format-connected = <label-connected>
-format-connected-foreground = ${color.white}
-format-disconnected = <label-disconnected>
-format-disconnected-foreground = ${color.gray}
-
-label-connected = 直 ; Glifo de Conectado
-label-disconnected = 睊 ; Glifo de Desconectado
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/auto-network]
-type = custom/script
-exec = ~/.config/polybar/scripts/auto_network.sh
-interval = 5 
-format-connected = <label>
-format-disconnected = <label>
-
-; Clic izquierdo: Usamos el editor de conexiones de NetworkManager
-click-left = nm-connection-editor
-
-format-foreground = ${color.white}
-label-disconnected-foreground = ${color.gray}
-
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/sysmenu]
-type = custom/text
-content = 襤
-
-content-foreground = ${color.white}
-click-left = ~/.config/polybar/scripts/powermenu_alt
-
-
-[module/network_switch]
-type = custom/script
-exec = ~/.config/polybar/scripts/network_switch.sh
-interval = 1
-click-left = ~/.config/polybar/scripts/network_switch.sh toggle
-
-[module/network-scan]
-type = custom/script
-tail = true
-exec = stdbuf -oL -eL ~/.config/polybar/scripts/network_scan.sh loop
-interval = 0
-click-right = ~/.config/polybar/scripts/network_scan.sh scan
-click-left  = ~/.config/polybar/scripts/network_scan.sh notify
-
-[module/workspaces]
-type = internal/xworkspaces
-pin-workspaces = true
-enable-click = true
-enable-scroll = true
-font-0 = "Iosevka Nerd Font:size=12;2"
-font-1 = "Font Awesome 6 Free:size=12;1"
-font-2 = "Iosevka Nerd Font:bold:size=12;2"
-format = <label-state>
-label-active = ■
-label-active-foreground = ${color.white}
-label-active-background = ${color.bg}
-label-occupied = □
-label-occupied-foreground = ${color.white}
-label-occupied-background = ${color.bg}
-label-urgent = ✘
-label-urgent-foreground = ${color.ac}
-label-urgent-background = ${color.bg}
-label-empty = ◇
-label-empty-foreground = ${color.white}
-label-empty-background = ${color.bg}
