--- a/Config Files/xsettingsd/xsettingsd.conf
+++ b/Config Files/xsettingsd/xsettingsd.conf
@@ -1,6 +1,6 @@
-Net/ThemeName "Materia-dark"
-Net/IconThemeName "Adwaita"
+Net/ThemeName "catppuccin-mocha-lavender-standard+default"
+Net/IconThemeName "Adwaita-dark"
 Gtk/FontName "Cantarell 11"
-Gtk/ColorScheme "default"
-Gtk/CursorThemeName "Moga-Neon-Cyan"
+Gtk/ColorScheme "prefer-dark"
+Gtk/CursorThemeName "catppuccin-mocha-dark-cursors"
 Gtk/CursorThemeSize 12
