--- a/Config Files/polybar/current.ini
+++ b/Config Files/polybar/current.ini
@@ -1,32 +1,20 @@
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-;;
-;;	    ____        __      __              
-;;	   / __ \____  / /_  __/ /_  ____ ______
-;;	  / /_/ / __ \/ / / / / __ \/ __ `/ ___/
-;;	 / ____/ /_/ / / /_/ / /_/ / /_/ / /    
-;;	/_/    \____/_/\__, /_.___/\__,_/_/     
-;;	              /____/                    
-;;
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+#########################################################
+#██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗ #
+#██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗#
+#██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝#
+#██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗#
+#██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║#
+#╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝#
+#########################################################
 
 ;; Configuración Global del Gestor de Ventanas (WM)
-
 [global/wm]
 include-file = $HOME/.config/polybar/colors.ini
 include-file = $HOME/.config/polybar/modules.ini
-
 ; Ajusta el valor inferior de _NET_WM_STRUT_PARTIAL para barras superiores
 margin-bottom = 0
-
 ; Ajusta el valor superior de _NET_WM_STRUT_PARTIAL para barras inferiores
 margin-top = 0
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-;; Inclusión de Archivos
-; Aquí incluyo mi archivo de colores y el de módulos.
-
-
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -44,11 +32,10 @@ monitor-fallback =
 ; Requiere que el monitor esté "conectado"
 monitor-strict = false
 
-; Indica al WM que no configure la ventana. Útil para desvincular la barra.
 ;override-redirect = true
 
 ; Coloca la barra en la parte inferior de la pantalla (Base: true)
-bottom = true
+bottom = false
 
 ; Prefiere una posición central fija para el bloque central.
 fixed-center = true
@@ -66,19 +53,11 @@ background = ${color.bg}
 foreground = ${color.fg}
 
 ; Degradado de fondo (background-[0-9] = #aarrggbb)
-;;background-0 = 
+; background-0 = 
 
 ; Valor para esquinas redondeadas (¡No usar con border-size!)
-radius-top = 10.0
-radius-bottom = 10.0
-
-; Tamaño y color de la línea inferior (underline)
-line-size = 2
-line-color = ${color.ac}
-
-; Bordes
-border-bottom-size = 0
-border-color = ${color.ac}
+radius-top = 0
+radius-bottom = 25
 
 ; Espacios al inicio/fin de la barra (padding-{left,right})
 padding = 2
@@ -101,93 +80,18 @@ font-6 = "Hurmit Nerd Font Mono:style=medium:pixelsize=17;3"
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;; --- Definiciones de Barras Individuales ---
-
-[bar/primary]
+[bar/necyber]
 inherit = bar/main
-offset-x = 96.9%
-width = 2.5%
-bottom = false ; La ponemos arriba
-padding = 0
-module-margin-left = 0
-module-margin-right = 0
-foreground = #44abff ; Color específico para el módulo
-modules-center = sysmenu
+monitor =
+width = 100%
+offset-x = 0
+offset-y = 0
+padding = 2
+fixed-center = true
+
+modules-left = sep2 date network_switch
+modules-center = sep2 workspaces
+modules-right = alsa tray sep2
+
 wm-restack = bspwm
-
-[bar/localip]
-inherit = bar/main
-width = 13%
-offset-x = 11%
-bottom = false ; La ponemos arriba
-padding = 1
-module-margin-left = 0
-module-margin-right = 0
-foreground = ${color.white}
-modules-center = network_switch 
-wm-restack = bspwm
-
-[bar/secondary]
-inherit = bar/main
-width = 7%
-offset-x = 3.8%
-bottom = false ; La ponemos arriba
-padding = 1
-module-margin-left = 0
-module-margin-right = 0
-foreground = ${color.white}
-modules-center = date 
-wm-restack = bspwm
-
-[bar/top]
-inherit = bar/main
-width = 10%
-height = 20
-offset-x = 60.5%
-offset-y = 3
-bottom = false
-background = ${color.bg}
-padding = 1
-module-margin-left = 1
-module-margin-right = 1
-modules-center = tray
-separator =
-spacing = 0
-dim-value = 1.0
-
-; Nombre de la ventana para el WM (para OpenBox)
-wm-name = openbox
-
-; Reorganiza la barra para que esté sobre ventanas en fullscreen
-wm-restack = bspwm
-
-; Ajuste de DPI (solo para fuentes escalables)
-; dpi = 
-
-; Habilitar comunicación entre procesos (IPC)
 enable-ipc = true
-
-click-left = 
-click-middle = 
-click-right =
-scroll-up =
-scroll-down =
-double-click-left =
-double-click-middle =
-double-click-right =
-
-cursor-click = 
-cursor-scroll = 
-
-
-[bar/workspaces]
-width = 10%
-height = 20
-inherit = bar/main
-wm-restack = bspwm
-offset-x = 40%
-offset-y = 3
-bottom = false
-padding = 0
-module-margin-left = 0
-module-margin-right = 0
-modules-center = workspaces
