--- a/SDDM/metadata.desktop
+++ b/SDDM/metadata.desktop
@@ -6,8 +6,8 @@ Website=https://github.com/Keyitdev/sddm-astronaut-theme
 License=GPL-3.0-or-later
 Type=sddm-theme
 Version=1.3
-ConfigFile=Themes/netenebrae.conf
-Screenshot=Previews/cover.jpg
+ConfigFile=Themes/astronaut.conf
+Screenshot=Previews/astronaut.png
 MainScript=Main.qml
 TranslationsDirectory=translations
 Theme-Id=sddm-astronaut-theme
