--- a/Config Files/polybar/modules.ini
+++ b/Config Files/polybar/modules.ini
@@ -49,26 +49,23 @@ type = custom/text
 content = "   "
 content-foreground = ${color.fg}
 
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_ 
 [module/workspaces]
 type = internal/xworkspaces
 pin-workspaces = true
 enable-click = true
 enable-scroll = true
-font-0 = "Iosevka Nerd Font:size=12;2"
-font-1 = "Font Awesome 6 Free:size=12;1"
-font-2 = "Iosevka Nerd Font:bold:size=12;2"
 format = <label-state>
-label-active = ""
+label-active = ◆
 label-active-foreground = ${color.white}
 label-active-background = ${color.bg}
-label-occupied = ""
+label-occupied = ◈
 label-occupied-foreground = ${color.white}
 label-occupied-background = ${color.bg}
-label-urgent = ""
+label-urgent = ❖
 label-urgent-foreground = ${color.ac}
 label-urgent-background = ${color.bg}
-label-empty = ""
+label-empty = ◇
 label-empty-foreground = ${color.white}
 label-empty-background = ${color.bg}
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
