--- a/SDDM/Themes/netenebrae.conf
+++ b/SDDM/Themes/netenebrae.conf
@@ -61,43 +61,55 @@ BackgroundVerticalAlignment="center"
 
 #################### Colors ####################
 
-HeaderTextColor="#5c729d"
-DateTextColor="#5c729d"
-TimeTextColor="#b7cef1"
+HeaderTextColor="#D49D9D"
+DateTextColor="#93969a"
+TimeTextColor="#D49D9D"
 
-FormBackgroundColor="#22162f"
-BackgroundColor="#5c729d"
-DimBackgroundColor="#5c729d"
+# Fondo del cuadro de login (Oscuro profundo extraído de la armadura/sombra)
+FormBackgroundColor="#191818"
+BackgroundColor="#191818"
+DimBackgroundColor="#000000"
 
-LoginFieldBackgroundColor="#623461"
-PasswordFieldBackgroundColor="#623461"
-LoginFieldTextColor="#b7cef1"
-PasswordFieldTextColor="#b7cef1"
-UserIconColor="#b7cef1"
-PasswordIconColor="#b7cef1"
+# Campos de entrada (Gris acero oscuro)
+LoginFieldBackgroundColor="#2b2a2a"
+PasswordFieldBackgroundColor="#2b2a2a"
 
-PlaceholderTextColor="#bbbbbb"
-WarningColor="#ffffff"
+# Texto en campos (Blanco humo para legibilidad)
+LoginFieldTextColor="#e0e0e0"
+PasswordFieldTextColor="#e0e0e0"
 
-LoginButtonTextColor="#ffffff"
-LoginButtonBackgroundColor="#5c729d"
-SystemButtonsIconsColor="#b7cef1"
-SessionButtonTextColor="#b7cef1"
-VirtualKeyboardButtonTextColor="#b7cef1"
+# Iconos de usuario/pass (Rosa pálido del cabello)
+UserIconColor="#D49D9D"
+PasswordIconColor="#D49D9D"
 
-DropdownTextColor="#ffffff"
-DropdownSelectedBackgroundColor="#5c729d"
-DropdownBackgroundColor="#171426"
+PlaceholderTextColor="#696b6f"
+WarningColor="#ff5555"
 
-HighlightTextColor="#1e1f2f"
-HighlightBackgroundColor="#b7cef1"
-HighlightBorderColor="#5c729d"
+# Botón de Login (Resaltado)
+LoginButtonTextColor="#191818"
+LoginButtonBackgroundColor="#D49D9D"
 
-HoverUserIconColor="#5c729d"
-HoverPasswordIconColor="#5c729d"
-HoverSystemButtonsIconsColor="#5c729d"
-HoverSessionButtonTextColor="#5c729d"
-HoverVirtualKeyboardButtonTextColor="#5c729d"
+# Botones del sistema (Apagado/Reinicio)
+SystemButtonsIconsColor="#696b6f"
+SessionButtonTextColor="#696b6f"
+VirtualKeyboardButtonTextColor="#696b6f"
+
+# Menús desplegables
+DropdownTextColor="#e0e0e0"
+DropdownSelectedBackgroundColor="#2b2a2a"
+DropdownBackgroundColor="#191818"
+
+# Selección de texto
+HighlightTextColor="#191818"
+HighlightBackgroundColor="#D49D9D"
+HighlightBorderColor="#D49D9D"
+
+# Estados Hover (Al pasar el mouse) - Se iluminan a blanco o rosa más intenso
+HoverUserIconColor="#ffffff"
+HoverPasswordIconColor="#ffffff"
+HoverSystemButtonsIconsColor="#e0e0e0"
+HoverSessionButtonTextColor="#e0e0e0"
+HoverVirtualKeyboardButtonTextColor="#e0e0e0"
 
 #################### Form ####################
 
