--- a/Config Files/polybar/current.ini
+++ b/Config Files/polybar/current.ini
@@ -67,17 +67,6 @@ module-margin-left = 1
 module-margin-right = 1
 
 ; Fuentes: <nombre-de-fuente>;<offset-vertical>
-font-0 = "Iosevka Nerd Font:size=13;3"
-font-1 = "Iosevka Nerd Font:bold:size=24;2"
-font-2 = "Iosevka Nerd Font:size=22;6"
-font-3 = "Source Code Pro:size=10;3"
-font-5 = "Helvetica Rounded:style=Bold:size=10.5;3"
-font-4 = "Montserrat Medium:style=Medium:size=12;3"
-font-6 = "Hurmit Nerd Font Mono:style=medium:pixelsize=17;3"
-
-; Los módulos se añaden a los bloques (left, center, right)
-; Ejemplo: modules-left = cpu ram
-
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;; --- Definiciones de Barras Individuales ---
 [bar/necyber]
@@ -89,9 +78,13 @@ offset-y = 0
 padding = 2
 fixed-center = true
 
-modules-left = sep2 date network_switch
-modules-center = sep2 workspaces
-modules-right = alsa tray sep2
+font-0 = "JetBrainsMono Nerd Font:style=Regular:size=12;3"
+font-1 = "Font Awesome 6 Free:style=Solid:size=12;3"
+font-2 = "JetBrainsMono Nerd Font:style=Bold:size=12;3"
+
+modules-left = date network_switch
+modules-center = workspaces
+modules-right = alsa tray 
 
 wm-restack = bspwm
 enable-ipc = true
