--- a/SDDM/Themes/netenebrae.conf
+++ b/SDDM/Themes/netenebrae.conf
@@ -61,55 +61,59 @@ BackgroundVerticalAlignment="center"
 
 #################### Colors ####################
 
-HeaderTextColor="#D49D9D"
-DateTextColor="#93969a"
-TimeTextColor="#D49D9D"
+# Rojo Carmesí (Extraído del fondo) para títulos
+HeaderTextColor="#D8232A"
+# Blanco Pálido (Extraído de la piel) para fecha/hora
+DateTextColor="#e6e6e6"
+TimeTextColor="#ffffff"
 
-# Fondo del cuadro de login (Oscuro profundo extraído de la armadura/sombra)
-FormBackgroundColor="#191818"
-BackgroundColor="#191818"
+# Fondo del formulario: Negro Profundo (Ropa/Pelo) para contraste máximo
+FormBackgroundColor="#0a0a0a"
+# Color de fondo de seguridad (por si la imagen no carga)
+BackgroundColor="#D8232A"
 DimBackgroundColor="#000000"
 
-# Campos de entrada (Gris acero oscuro)
-LoginFieldBackgroundColor="#2b2a2a"
-PasswordFieldBackgroundColor="#2b2a2a"
+# Campos de entrada: Aún más oscuros para profundidad
+LoginFieldBackgroundColor="#000000"
+PasswordFieldBackgroundColor="#000000"
 
-# Texto en campos (Blanco humo para legibilidad)
-LoginFieldTextColor="#e0e0e0"
-PasswordFieldTextColor="#e0e0e0"
+# Texto al escribir: Blanco puro
+LoginFieldTextColor="#ffffff"
+PasswordFieldTextColor="#ffffff"
 
-# Iconos de usuario/pass (Rosa pálido del cabello)
-UserIconColor="#D49D9D"
-PasswordIconColor="#D49D9D"
+# Iconos: Rojo Sangre para que destaquen en lo negro
+UserIconColor="#D8232A"
+PasswordIconColor="#D8232A"
 
-PlaceholderTextColor="#696b6f"
+PlaceholderTextColor="#4a4a4a"
 WarningColor="#ff5555"
 
-# Botón de Login (Resaltado)
-LoginButtonTextColor="#191818"
-LoginButtonBackgroundColor="#D49D9D"
+# Botón de Login: El acento principal
+LoginButtonTextColor="#000000"
+LoginButtonBackgroundColor="#D8232A"
 
-# Botones del sistema (Apagado/Reinicio)
-SystemButtonsIconsColor="#696b6f"
-SessionButtonTextColor="#696b6f"
-VirtualKeyboardButtonTextColor="#696b6f"
+# Botones de sistema (Apagado, etc): Grises sutiles
+SystemButtonsIconsColor="#666666"
+SessionButtonTextColor="#666666"
+VirtualKeyboardButtonTextColor="#666666"
 
 # Menús desplegables
-DropdownTextColor="#e0e0e0"
-DropdownSelectedBackgroundColor="#2b2a2a"
-DropdownBackgroundColor="#191818"
+DropdownTextColor="#ffffff"
+DropdownSelectedBackgroundColor="#D8232A"
+DropdownBackgroundColor="#0a0a0a"
 
-# Selección de texto
-HighlightTextColor="#191818"
-HighlightBackgroundColor="#D49D9D"
-HighlightBorderColor="#D49D9D"
+# Selección de texto (High Contrast)
+HighlightTextColor="#ffffff"
+HighlightBackgroundColor="#D8232A"
+HighlightBorderColor="#D8232A"
 
-# Estados Hover (Al pasar el mouse) - Se iluminan a blanco o rosa más intenso
+# Hover (Al pasar el mouse): Se iluminan a blanco
 HoverUserIconColor="#ffffff"
 HoverPasswordIconColor="#ffffff"
-HoverSystemButtonsIconsColor="#e0e0e0"
-HoverSessionButtonTextColor="#e0e0e0"
-HoverVirtualKeyboardButtonTextColor="#e0e0e0"
+HoverSystemButtonsIconsColor="#ffffff"
+HoverSessionButtonTextColor="#ffffff"
+HoverVirtualKeyboardButtonTextColor="#ffffff"
+
 
 #################### Form ####################
 
