--- a/Config Files/polybar/modules.ini
+++ b/Config Files/polybar/modules.ini
@@ -56,17 +56,17 @@ pin-workspaces = true
 enable-click = true
 enable-scroll = true
 format = <label-state>
-label-active = ◆
-label-active-foreground = ${color.white}
+label-active = ◈
+label-active-foreground = ${color.doshade5}
 label-active-background = ${color.bg}
-label-occupied = ◈
-label-occupied-foreground = ${color.white}
+label-occupied = ◆
+label-occupied-foreground = ${color.greshade3}
 label-occupied-background = ${color.bg}
 label-urgent = ❖
 label-urgent-foreground = ${color.ac}
 label-urgent-background = ${color.bg}
 label-empty = ◇
-label-empty-foreground = ${color.white}
+label-empty-foreground = ${color.greshade2}
 label-empty-background = ${color.bg}
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
