--- a/Config Files/conky/conky.conf
+++ b/Config Files/conky/conky.conf
@@ -69,7 +69,7 @@ ${color2}USER   :: ${color}${execi 600 whoami} ${goto 400}${color2}HOST :: ${col
 ${color2}KERNEL :: ${color}${exec uname -r | cut -d'-' -f1} ${color2}(${exec uname -r | awk -F'-' '{print $2}'})${color}
 ${color2}UPTIME :: ${color}${uptime_short}
 ${color2}SHELL  :: ${color}${execi 600 echo $SHELL | awk -F/ '{print $NF}'} ${goto 400}${color2}WM   :: ${color}BSPWM
-${color2}FIREWALL:: ${color}${execi 60 sudo ufw status | head -n1 | awk '{print $2}' | tr '[:lower:]' '[:upper:]'} ${goto 400}${color2}PKGS :: ${color}${execi 1800 (checkupdates 2>/dev/null | wc -l) || echo 0} PENDING
+${color2}FIREWALL:: ${color}${if_match "${exec systemctl is-active ufw}" == "active"}ACTIVE${else}INACTIVE${endif} ${goto 400}${color2}PKGS :: ${color}${execi 1800 (checkupdates 2>/dev/null | wc -l) || echo 0} PENDING
 
 ${voffset 6}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=11}RESOURCES${font}${color}
 ${color2}RAM :: ${color}${memperc}% ${goto 400}${color2}CPU :: ${color}${cpu cpu0}%
