--- a/Config Files/polybar/modules.ini
+++ b/Config Files/polybar/modules.ini
@@ -23,7 +23,7 @@ type = internal/date
 interval = 1.0
 
 ; Vista normal (24h)
-time = %H:%M:%S (GMT-5)
+time = %H:%M:%S [GMT-5]
 date = %b %e
 
 ; Vista alternativa (12h con AM/PM)
@@ -32,32 +32,42 @@ date-alt = %b %e
 
 format = <label>
 format-foreground = ${color.white}
-label = %date% | %time%
-label-font = 6
-
+label = %date% - %time%
+label-font = 0
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/sep]
 type = custom/text
-content = " | "
+content = |
 content-font = 1
-content-foreground = ${color.fg}
+content-foreground = #ffffff
+content-background = #000000
 
 [module/sep2]
 type = custom/text
-content = "   "
-content-foreground = ${color.fg}
+content = " · "
+content-font = 1
+content-foreground = #00ff00
+content-background = #000000
+
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_ 
 [module/workspaces]
 type = internal/xworkspaces
+
 pin-workspaces = true
 enable-click = true
 enable-scroll = true
+
+label-active-font = 2
+label-occupied-font = 2 
+label-urgent-font = 2
+label-empty-font = 2
+
 format = <label-state>
 label-active = ◈
-label-active-foreground = ${color.doshade5}
+label-active-foreground = ${color.reshade2}
 label-active-background = ${color.bg}
 label-occupied = ◆
 label-occupied-foreground = ${color.greshade3}
@@ -68,6 +78,10 @@ label-urgent-background = ${color.bg}
 label-empty = ◇
 label-empty-foreground = ${color.greshade2}
 label-empty-background = ${color.bg}
+
+
+
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/battery]
@@ -115,3 +129,14 @@ animation-charging-foreground = ${color.white}
 animation-charging-framerate = 750
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+[module/network-cycle]
+type = custom/script
+exec = ~/.config/polybar/scripts/net_info.sh
+interval = 5
+label = %output%
+format-foreground = #ffffff
+format-background = #000000
+label-font = 0
+
+click-left = ~/.config/polybar/scripts/net_info.sh prev
+click-right = ~/.config/polybar/scripts/net_info.sh next
