--- a/Config Files/conky/conky.conf
+++ b/Config Files/conky/conky.conf
@@ -1,7 +1,7 @@
 conky.config = {
 --==============================================================================
---  neTENEBRAE // RED OPS CONKY (FINAL ALIGNED VERSION)
---  Strict 2-Column Grid Layout
+--  neTENEBRAE // RED OPS CONKY (COMPACT VERSION)
+--  Strict 2-Column Grid Layout - Narrow
 --==============================================================================
 
   -- Core Settings
@@ -25,11 +25,10 @@ conky.config = {
   border_outer_margin = 0,
 
   -- Layout & Placement
-  alignment = 'top_left',
-  gap_x = 30,
-  gap_y = 48,
-  minimum_width = 750,
-  maximum_width = 725,
+  alignment = 'middle_left',   -- Fija el ancla verticalmente al centro, horizontalmente a la izquierda
+  gap_x = 50,                  -- Margen desde el borde izquierdo (ajústalo a tu gusto)
+  gap_y = 0,                   -- 0 = Centro vertical exacto.
+  
 
   -- Graphics
   draw_shades = true,
@@ -42,7 +41,7 @@ conky.config = {
 
   -- Text & Fonts
   use_xft = true,
-  font = 'JetBrainsMono Nerd Font:size=12',
+  font = 'JetBrainsMono Nerd Font:size=10', -- Reducido a 10 para encajar mejor
   uppercase = true,
   override_utf8_locale = true,
   short_units = true,
@@ -59,43 +58,36 @@ conky.config = {
 };
 
 conky.text = [[
-${alignc}${lua_parse get_anim}
-${voffset -10}${alignc}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=28}${time %A}${font}${color}
-${voffset -5}${alignc}${color2}${font JetBrainsMono Nerd Font:size=12}${time %d %B %Y}${font}${color}
+${lua_parse get_anim}
+${voffset -10}${alignc}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=24}${time %A}${font}${color}
+${voffset -5}${alignc}${color2}${font JetBrainsMono Nerd Font:size=10}${time %d %B %Y}${font}${color}
 ${voffset 5}${color1}${hr 2}${color}
 
 ${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}OPSEC${font}${color}
-${color2}USER   :: ${color}${execi 600 whoami} ${goto 400}${color2}HOST :: ${color}${nodename}
-${color2}KERNEL :: ${color}${exec uname -r | cut -d'-' -f1} ${color2}(${exec uname -r | awk -F'-' '{print $2}'})${color}
-${color2}UPTIME :: ${color}${uptime_short}
-${color2}SHELL  :: ${color}${execi 600 echo $SHELL | awk -F/ '{print $NF}'} ${goto 400}${color2}WM   :: ${color}BSPWM
-${color2}FIREWALL:: ${color}${if_match "${exec systemctl is-active ufw}" == "active"}ACTIVE${else}INACTIVE${endif} ${goto 400}${color2}PKGS :: ${color}${execi 1800 (checkupdates 2>/dev/null | wc -l) || echo 0} PENDING
+${color2}USER   :: ${color}${execi 600 whoami} ${lua_parse col}${color2}HOST   :: ${color}${nodename}
+${color2}KERNEL :: ${color}${exec uname -r | cut -d'-' -f1} ${lua_parse col}${color2}WM     :: ${color}BSPWM
+${color2}UPTIME :: ${color}${uptime_short} ${lua_parse col}${color2}PKGS   :: ${color}${execi 1800 (checkupdates 2>/dev/null | wc -l) || echo 0}
+${color2}SHELL  :: ${color}${execi 600 echo $SHELL | awk -F/ '{print $NF}'}
 
-${voffset 6}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=11}RESOURCES${font}${color}
-${color2}RAM :: ${color}${memperc}% ${goto 400}${color2}CPU :: ${color}${cpu cpu0}%
-${color1}${memgraph 5,310 333333 FFFFFF} ${goto 400}${cpugraph cpu0 5,310 333333 FFFFFF}${color}
+${voffset 6}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}RESOURCES${font}${color}
+${color2}RAM    :: ${color}${memperc}% ${lua_parse col}${color2}CPU    :: ${color}${cpu cpu0}%
+${lua_parse draw_bar ${memperc} 18} ${lua_parse col}${lua_parse draw_bar ${cpu cpu0} 18}
 
-${voffset -20}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}RECON & NETWORK${font}${color}
-${color2}IFACE       :: ${color}${execi 60 ip route get 1.1.1.1 | awk '{print $5; exit}' | tr '[:lower:]' '[:upper:]'} ${goto 400}${color2}LOCAL IP :: ${color}${execi 60 ip route get 1.1.1.1 | awk '{print $7; exit}'}
-${color2}PORTS (L/E) :: ${color}${execi 15 ss -lntuH 2>/dev/null | wc -l} / ${execi 10 ss -tanH state established 2>/dev/null | wc -l} ${goto 400}${color2}DNS SRV  :: ${color}${execi 60 awk 'NF && $1=="nameserver"{print $2; exit}' /etc/resolv.conf}
-${if_existing /proc/net/route enp0s29u1u2}
-${color2}SPEED (USB) :: ${color}▼ ${downspeed enp0s29u1u2}  ▲ ${upspeed enp0s29u1u2}
-${endif}${if_existing /proc/net/route wlan0}
-${color2}SPEED (WLAN):: ${color}▼ ${downspeed wlan0}  ▲ ${upspeed wlan0}
-${endif}${if_existing /proc/net/route enp5s0}
-${color2}SPEED (ETH) :: ${color}▼ ${downspeed enp5s0}  ▲ ${upspeed enp5s0}
-${endif}
+${voffset 6}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}NETWORK${font}${color}
+${color2}IFACE  :: ${color}${execi 60 ip route get 1.1.1.1 | awk '{print $5; exit}' | tr '[:lower:]' '[:upper:]'}
+${color2}LOCAL  :: ${color}${execi 60 ip route get 1.1.1.1 | awk '{print $7; exit}'}
+${color2}PORTS  :: ${color}${execi 15 ss -lntuH 2>/dev/null | wc -l} (Open) / ${execi 10 ss -tanH state established 2>/dev/null | wc -l} (Est)
+${color2}DNS    :: ${color}${execi 60 awk 'NF && $1=="nameserver"{print $2; exit}' /etc/resolv.conf}
+${lua_parse draw_net_speed}
 
-
-${voffset -40}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}PROCESSES${font}${color}
+${voffset 6}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}PROCESSES${font}${color}
 ${lua_parse draw_proc_header}
 ${lua_parse draw_proc 1}
 ${lua_parse draw_proc 2}
 ${lua_parse draw_proc 3}
 ${lua_parse draw_proc 4}
 
-
 ${voffset 6}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}STORAGE${font}${color}
-${color2}ROOT :: ${color}${fs_used /}/${fs_size /} ${goto 400}${color2}HOME :: ${color}${fs_used /home}/${fs_size /home}
-${color1}${fs_bar 6,350 /} ${goto 400}${fs_bar 6,350 /home}${color}
+${color2}ROOT   :: ${color}${fs_used /}/${fs_size /} ${lua_parse col}${color2}HOME   :: ${color}${fs_used /home}
+${color1}${fs_bar 6,200 /} ${lua_parse col}${fs_bar 6,200 /home}${color}
 ]];
