--- a/Config Files/polybar/current.ini
+++ b/Config Files/polybar/current.ini
@@ -78,11 +78,12 @@ offset-y = 0
 padding = 2
 fixed-center = true
 
-font-0 = "JetBrainsMono Nerd Font:style=Bold:size=12;3"
-font-1 = "JetBrainsMono Nerd Font:style=Regular:size=12;3"
-font-2 = "Font Awesome 6 Free:style=Solid:size=12;3"
+font-0 = "JetBrainsMono Nerd Font:style=Bold:size=10;3"
+font-1 = "JetBrainsMono Nerd Font:style=Bold:size=20;3"
+font-2 = "Font Awesome 6 Free:style=Solid:size=20;3"
+font-3 = "Font Awesome 6 Free:style=Solid:size=10;3"
 
-modules-left = date network_switch
+modules-left = date sep network-cycle
 modules-center = workspaces
 modules-right = alsa tray 
 
