--- a/Config Files/picom/picom.conf
+++ b/Config Files/picom/picom.conf
@@ -142,3 +142,9 @@ rounded-corners-exclude = [
   "class_g = 'Rofi'",
   "class_g = 'Dunst'",
 ];
+# Al final del archivo, agrega:
+opacity-rule = [
+  "100:class_g = 'i3lock'",
+  "100:name = 'betterlockscreen'",
+  "100:class_g ?= 'betterlockscreen'"
+];
