--- a/Config Files/polybar/current.ini
+++ b/Config Files/polybar/current.ini
@@ -67,25 +67,23 @@ module-margin-left = 1
 module-margin-right = 1
 
 ; Fuentes: <nombre-de-fuente>;<offset-vertical>
+font-0 = "JetBrainsMono Nerd Font:style=Bold:size=10;3"  
+font-1 = "JetBrainsMono Nerd Font:style=Bold:size=20;3"  
+font-2 = "JetBrainsMono Nerd Font:style=Bold:size=14;3" 
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;; --- Definiciones de Barras Individuales ---
 [bar/necyber]
 inherit = bar/main
-monitor =
 width = 100%
 offset-x = 0
 offset-y = 0
 padding = 2
 fixed-center = true
 
-font-0 = "JetBrainsMono Nerd Font:style=Bold:size=10;3"
-font-1 = "JetBrainsMono Nerd Font:style=Bold:size=20;3"
-font-2 = "Font Awesome 6 Free:style=Solid:size=20;3"
-font-3 = "Font Awesome 6 Free:style=Solid:size=10;3"
-
-modules-left = date sep network-cycle
+modules-left = powermenu date sep network-cycle
 modules-center = workspaces
-modules-right = alsa tray 
+modules-right = volume tray 
 
 wm-restack = bspwm
 enable-ipc = true
