--- a/Config Files/polybar/modules.ini
+++ b/Config Files/polybar/modules.ini
@@ -32,21 +32,21 @@ date-alt = %b %e
 
 format = <label>
 format-foreground = ${color.white}
-label = %date% - %time%
-label-font = 0
+label =  %date% - %time%
+label-font = 1
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/sep]
 type = custom/text
-content = |
+content = "|"
 content-font = 1
 content-foreground = #ffffff
 content-background = #000000
 
 [module/sep2]
 type = custom/text
-content = " · "
+content = " "
 content-font = 1
 content-foreground = #00ff00
 content-background = #000000
@@ -78,9 +78,6 @@ label-urgent-background = ${color.bg}
 label-empty = ◇
 label-empty-foreground = ${color.greshade2}
 label-empty-background = ${color.bg}
-
-
-
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -132,11 +129,38 @@ animation-charging-framerate = 750
 [module/network-cycle]
 type = custom/script
 exec = ~/.config/polybar/scripts/net_info.sh
-interval = 5
+interval = 1
 label = %output%
 format-foreground = #ffffff
 format-background = #000000
-label-font = 0
-
 click-left = ~/.config/polybar/scripts/net_info.sh prev
 click-right = ~/.config/polybar/scripts/net_info.sh next
+
+[module/powermenu]
+type = custom/script
+exec = ~/.config/polybar/scripts/powermenu_toggle.sh status
+interval = 1
+tail = false
+
+click-left = ~/.config/polybar/scripts/powermenu_toggle.sh click
+
+[module/volume]
+type = internal/alsa
+master-mixer = Master
+interval = 2
+
+; Iconos JetBrainsMono Nerd Font
+format-volume = <ramp-volume> <label-volume>
+label-volume = %percentage%%
+
+ramp-volume-0 = 󰕿   ; volumen bajo
+ramp-volume-1 = 󰖀   ; volumen medio
+ramp-volume-2 = 󰕾   ; volumen alto
+
+label-muted = 󰝟 muted
+label-muted-foreground = #666666
+
+; Acciones
+click-left = pavucontrol
+scroll-up = exec amixer -q set Master 5%+
+scroll-down = exec amixer -q set Master 5%-
