--- a/Config Files/conky/conky.conf
+++ b/Config Files/conky/conky.conf
@@ -65,7 +65,7 @@ ${voffset 5}${color1}${hr 2}${color}
 
 ${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}OPSEC${font}${color}
 ${color2}USER   :: ${color}${execi 600 whoami} ${lua_parse col}${color2}HOST   :: ${color}${nodename}
-${color2}KERNEL :: ${color}${exec uname -r | cut -d'-' -f1} ${lua_parse col}${color2}WM     :: ${color}BSPWM
+${color2}KERNEL :: ${color}${exec uname -r | sed 's/[0-9.]*//;s/-//;s/-.*//' | tr '[:lower:]' '[:upper:]'} ${lua_parse col}${color2}WM     :: ${color}BSPWM
 ${color2}UPTIME :: ${color}${uptime_short} ${lua_parse col}${color2}PKGS   :: ${color}${execi 1800 (checkupdates 2>/dev/null | wc -l) || echo 0}
 ${color2}SHELL  :: ${color}${execi 600 echo $SHELL | awk -F/ '{print $NF}'}
 
