--- a/Config Files/polybar/modules.ini
+++ b/Config Files/polybar/modules.ini
@@ -19,21 +19,17 @@ background = ${color.bg}
 foreground = ${color.white}
 
 [module/date]
-type = internal/date
-interval = 1.0
-
-; Vista normal (24h)
-time = %H:%M:%S [GMT-5]
-date = %b %e
-
-; Vista alternativa (12h con AM/PM)
-time-alt = %I:%M:%S %p
-date-alt = %b %e
+type = custom/script
+exec = ~/.config/polybar/scripts/GMTime.sh
+interval = 1
 
 format = <label>
 format-foreground = ${color.white}
-label =  %date% - %time%
 label-font = 1
+
+; Click izquierdo: alterna modo
+click-left = ~/.config/polybar/scripts/GMTime.sh --toggle &
+
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -144,23 +140,21 @@ tail = false
 
 click-left = ~/.config/polybar/scripts/powermenu_toggle.sh click
 
-[module/volume]
-type = internal/alsa
-master-mixer = Master
-interval = 2
+[module/audio]
+type = custom/script
+exec = ~/.config/polybar/scripts/Audio.sh
+interval = 0
+tail = false
 
-; Iconos JetBrainsMono Nerd Font
-format-volume = <ramp-volume> <label-volume>
-label-volume = %percentage%%
+; Hook principal: se ejecuta cuando lo disparemos
+hook-0 = ~/.config/polybar/scripts/Audio.sh
 
-ramp-volume-0 = 󰕿   ; volumen bajo
-ramp-volume-1 = 󰖀   ; volumen medio
-ramp-volume-2 = 󰕾   ; volumen alto
+format = <label>
+label = %output%
+format-foreground = ${color.white}
+label-font = 1
 
-label-muted = 󰝟 muted
-label-muted-foreground = #666666
-
-; Acciones
-click-left = pavucontrol
-scroll-up = exec amixer -q set Master 5%+
-scroll-down = exec amixer -q set Master 5%-
+; Click/scroll: cambian volumen + refrescan módulo al instante
+click-left  = ~/.config/polybar/scripts/Audio.sh --toggle-mute  && polybar-msg hook audio 1 >/dev/null
+scroll-up   = ~/.config/polybar/scripts/Audio.sh --inc          && polybar-msg hook audio 1 >/dev/null
+scroll-down = ~/.config/polybar/scripts/Audio.sh --dec          && polybar-msg hook audio 1 >/dev/null
