--- a/Config Files/conky/conky.conf
+++ b/Config Files/conky/conky.conf
@@ -1,9 +1,4 @@
 conky.config = {
---==============================================================================
---  neTENEBRAE // RED OPS CONKY (COMPACT VERSION)
---  Strict 2-Column Grid Layout - Narrow
---==============================================================================
-
   -- Core Settings
   update_interval = 1.5,
   cpu_avg_samples = 2,
@@ -25,10 +20,9 @@ conky.config = {
   border_outer_margin = 0,
 
   -- Layout & Placement
-  alignment = 'middle_left',   -- Fija el ancla verticalmente al centro, horizontalmente a la izquierda
-  gap_x = 50,                  -- Margen desde el borde izquierdo (ajústalo a tu gusto)
-  gap_y = 0,                   -- 0 = Centro vertical exacto.
-  
+  alignment = 'middle_left',
+  gap_x = 50,
+  gap_y = 0,
 
   -- Graphics
   draw_shades = true,
@@ -36,16 +30,13 @@ conky.config = {
   draw_outline = false,
   draw_borders = false,
   draw_graph_borders = false,
-  show_graph_scale = false,
-  show_graph_range = false,
 
   -- Text & Fonts
   use_xft = true,
-  font = 'JetBrainsMono Nerd Font:size=10', -- Reducido a 10 para encajar mejor
+  font = 'JetBrainsMono Nerd Font:size=10',
   uppercase = true,
   override_utf8_locale = true,
   short_units = true,
-  use_spacer = 'none',
 
   -- Colors
   default_color = '#FFFFFF',
@@ -53,41 +44,42 @@ conky.config = {
   color2 = '#B0B0B0',
   color3 = '#FF3333',
 
-  -- LUA LOADER
+  -- LUA LOADER (Asegúrate que la ruta sea correcta)
   lua_load = '/home/netenebrae/.config/conky/anim.lua',
 };
 
 conky.text = [[
-${lua_parse get_anim}
+${lua_parse conky_get_anim}
 ${voffset -10}${alignc}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=24}${time %A}${font}${color}
 ${voffset -5}${alignc}${color2}${font JetBrainsMono Nerd Font:size=10}${time %d %B %Y}${font}${color}
 ${voffset 5}${color1}${hr 2}${color}
 
-${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}OPSEC${font}${color}
-${color2}USER   :: ${color}${execi 600 whoami} ${lua_parse col}${color2}HOST   :: ${color}${nodename}
-${color2}KERNEL :: ${color}${exec uname -r | sed 's/[0-9.]*//;s/-//;s/-.*//' | tr '[:lower:]' '[:upper:]'} ${lua_parse col}${color2}WM     :: ${color}BSPWM
-${color2}UPTIME :: ${color}${uptime_short} ${lua_parse col}${color2}PKGS   :: ${color}${execi 1800 (checkupdates 2>/dev/null | wc -l) || echo 0}
-${color2}SHELL  :: ${color}${execi 600 echo $SHELL | awk -F/ '{print $NF}'}
+${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}SYSTEM INFO${font}${color}
+${color2}USER   :: ${color}${execi 600 whoami} ${lua_parse conky_col}${color2}WM       :: ${color}BSPWM
+${color2}HOST   :: ${color}${nodename} ${lua_parse conky_col}${color2}SHELL    :: ${color}ZSH
+${color2}KERNEL :: ${color}${exec uname -r | cut -d- -f1} ${lua_parse conky_col}${color2}INSTALLED:: ${color}${execi 3600 pacman -Q | wc -l}
+${color2}UPTIME :: ${color}${uptime_short} ${lua_parse conky_col}${color2}SUDO     :: ${color}${execi 30 journalctl _COMM=sudo -b | grep -c "COMMAND="}${color}
 
 ${voffset 6}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}RESOURCES${font}${color}
-${color2}RAM    :: ${color}${memperc}% ${lua_parse col}${color2}CPU    :: ${color}${cpu cpu0}%
-${lua_parse draw_bar ${memperc} 18} ${lua_parse col}${lua_parse draw_bar ${cpu cpu0} 18}
+${color2}RAM    :: ${color}${mem}/${memmax} ${lua_parse conky_col}${color2}CPU      :: ${color}${cpu cpu0}%
+${color2}SWAP   :: ${color}${swapperc}% ${lua_parse conky_col}${color2}TMP      :: ${color}${if_match ${hwmon 1 temp 1} > 75}${color3}${else}${color}${endif}${hwmon 1 temp 1}°C
+${lua_parse conky_draw_bar ${memperc} 18} ${lua_parse conky_col}${lua_parse conky_draw_bar ${cpu cpu0} 18}
 
-${voffset 6}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}NETWORK${font}${color}
-${color2}IFACE  :: ${color}${execi 60 ip route get 1.1.1.1 | awk '{print $5; exit}' | tr '[:lower:]' '[:upper:]'}
-${color2}LOCAL  :: ${color}${execi 60 ip route get 1.1.1.1 | awk '{print $7; exit}'}
-${color2}PORTS  :: ${color}${execi 15 ss -lntuH 2>/dev/null | wc -l} (Open) / ${execi 10 ss -tanH state established 2>/dev/null | wc -l} (Est)
-${color2}DNS    :: ${color}${execi 60 awk 'NF && $1=="nameserver"{print $2; exit}' /etc/resolv.conf}
-${lua_parse draw_net_speed}
-
-${voffset 6}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}PROCESSES${font}${color}
-${lua_parse draw_proc_header}
-${lua_parse draw_proc 1}
-${lua_parse draw_proc 2}
-${lua_parse draw_proc 3}
-${lua_parse draw_proc 4}
+${voffset 6}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}NETWORK & SECURITY${font}${color}
+${color2}IFACE  :: ${color}${execi 60 ip route get 1.1.1.1 | awk '{print $5; exit}' | tr '[:lower:]' '[:upper:]'} ${lua_parse conky_col}${color2}VPN      :: ${lua_parse conky_check_vpn}
+${color2}IP LOC :: ${color}${execi 60 ip route get 1.1.1.1 | awk '{print $7; exit}'} ${lua_parse conky_col}${color2}FWALL    :: ${lua_parse conky_check_fw}
+${color2}DNS    :: ${color}${execi 60 awk 'NF && $1=="nameserver"{print $2; exit}' /etc/resolv.conf} ${lua_parse conky_col}${color2}PORTS    :: ${color}${execi 15 ss -lntuH | wc -l} Open
+${color2}PING   :: ${color}${lua_parse conky_get_ping} ${lua_parse conky_col}${color2}SSH SESS :: ${color}${lua_parse conky_get_ssh}
+${lua_parse conky_draw_net_speed}
 
 ${voffset 6}${color1}${font JetBrainsMono Nerd Font:style=Bold:size=10}STORAGE${font}${color}
-${color2}ROOT   :: ${color}${fs_used /}/${fs_size /} ${lua_parse col}${color2}HOME   :: ${color}${fs_used /home}
-${color1}${fs_bar 6,200 /} ${lua_parse col}${fs_bar 6,200 /home}${color}
+${lua_parse conky_draw_storage}
+
+${voffset 10}${lua_parse conky_draw_box_border top}
+${voffset -1}${lua_parse conky_draw_box_header}
+${voffset -1}${lua_parse conky_draw_proc_boxed 1}
+${voffset -1}${lua_parse conky_draw_proc_boxed 2}
+${voffset -1}${lua_parse conky_draw_proc_boxed 3}
+${voffset -1}${lua_parse conky_draw_proc_boxed 4}
+${voffset -1}${lua_parse conky_draw_box_border bottom}
 ]];
