--- a/Config Files/polybar/current.ini
+++ b/Config Files/polybar/current.ini
@@ -83,7 +83,7 @@ fixed-center = true
 
 modules-left = powermenu date sep network-cycle
 modules-center = workspaces
-modules-right = tray audio
+modules-right = audio sep tray
 
 wm-restack = bspwm
 enable-ipc = true
